[package]
name = "rust-AStar"
version = "0.1.0"
authors = ["SleepingFox8 <SleepingFox8@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
pathfinding = "2.1.1"